--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Caio Farias <caio4095@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "dependencies": {
     "axios": "^0.21.1",
